<resources>
    <string name="tools_qm_note">Note</string>
    <string name="tools_qm_add_note">Add Comment</string>
    <string name="tools_qm_view_note">View Comment</string>
    <string name="tools_qm_appearance">Style</string>
    <string name="tools_qm_textmarkup_type">Type</string>
    <string name="pref_colormode_custom_text_color">Text color</string>
    <string name="tools_qm_color">Color</string>
    <string name="tools_qm_stroke_color">Border color</string>
    <string name="tools_qm_fill_color">Fill color</string>
    <string name="tools_qm_thickness" comment="the thickness of stroke">Stroke</string>
    <string name="tools_qm_opacity">Opacity</string>
    <string name="tools_qm_reply">Reply</string>
    <string name="tools_qm_copy_to_clipboard">Copy to Clipboard</string>
    <string name="tools_qm_sign_and_save">Sign and Save</string>
    <string name="tools_qm_field_signed">Field is digitally signed</string>
    <string name="tools_qm_crop">Crop</string>
    <string name="tools_qm_copy">Copy</string>
    <string name="tools_qm_copy_text">Copy Text</string>
    <string name="tools_qm_measurement">Measure</string>
    <string name="tools_qm_shape">Shapes</string>
    <string name="tools_qm_free_text" translatable="false">@string/annot_free_text</string>
    <string name="tools_qm_strikeout" translatable="false">@string/annot_strikeout</string>
    <string name="tools_qm_highlight" translatable="false">@string/annot_highlight</string>
    <string name="tools_qm_underline" translatable="false">@string/annot_underline</string>
    <string name="tools_qm_squiggly" translatable="false">@string/annot_squiggly</string>
    <string name="tools_qm_redact" translatable="false">@string/annot_redact</string>
    <string name="tools_qm_redaction" translatable="false">@string/annot_redaction</string>
    <string name="tools_qm_line" translatable="false">@string/annot_line</string>
    <string name="tools_qm_link" translatable="false">@string/annot_link</string>
    <string name="tools_qm_arrow" translatable="false">@string/annot_arrow</string>
    <string name="tools_qm_ruler" translatable="false">@string/annot_ruler</string>
    <string name="tools_qm_callout" translatable="false">@string/annot_callout</string>
    <string name="tools_qm_polyline" translatable="false">@string/annot_polyline</string>
    <string name="tools_qm_polygon" translatable="false">@string/annot_polygon</string>
    <string name="tools_qm_cloud" translatable="false">@string/annot_cloud</string>
    <string name="tools_qm_rectangle" translatable="false">@string/annot_square</string>
    <string name="tools_qm_ellipse" translatable="false">@string/annot_circle</string>
    <string name="tools_qm_signature" translatable="false">@string/annot_signature</string>
    <string name="tools_qm_eraser">Eraser</string>
    <string name="tools_qm_use_saved_sig">Use default signature</string>
    <string name="tools_qm_new_signature">Create new signature</string>
    <string name="tools_qm_form_create">Forms</string>
    <string name="tools_qm_attach">Attach</string>
    <string name="tools_qm_sound">Record audio</string>
    <string name="tools_qm_attach_file">Attach file</string>
    <string name="tools_qm_play_sound">Play audio</string>
    <string name="tools_qm_group_select">Group select</string>
    <string name="tools_qm_form_text">Text field</string>
    <string name="tools_qm_form_checkbox">Checkbox</string>
    <string name="tools_qm_form_radio_group">Radio button</string>
    <string name="tools_qm_form_radio_add_item">Add another button</string>
    <string name="tools_qm_form_combo_box">Combo box</string>
    <string name="tools_qm_form_list_box">List box</string>
    <string name="tools_qm_flatten">Flatten</string>
    <string name="tools_qm_duplicate" translatable="false">@string/controls_misc_duplicate</string>
    <string name="qm_screencap_create">Screenshot</string>
    <string name="tools_qm_group">Group</string>
    <string name="tools_qm_ungroup">Ungroup</string>
    <string name="tools_qm_calibrate">Calibrate</string>
    <string name="tools_qm_open_attachment">Open Attachment</string>
    <string name="tools_qm_save_attachment">Save Attachment</string>
    <string name="tools_qm_define">Define</string>
    <string name="tools_qm_translate">Translate</string>
    <string name="tools_qm_text_to_speech">Read</string>
    <string name="tools_qm_stamper">Image</string>
    <string name="tools_qm_rubber_stamp" translatable="false">@string/annot_stamp</string>
    <string name="tools_qm_rotate">Rotate</string>
    <string name="tools_qm_paste">Paste</string>
    <string name="tools_qm_edit">Edit</string>
    <string name="tools_qm_open_link">Go</string>
    <string name="tools_qm_tools">Tools</string>
    <string name="tools_qm_back">Back</string>
    <string name="tools_annot_style_preview_text">Abcde</string>
    <string name="tools_copy_confirmation">Copied to clipboard</string>
    <string name="tools_copy_annot_confirmation">Copied annotation to clipboard</string>
    <string name="tools_copy_annot_teach">Press Ctrl+V to paste where the cursor is</string>
    <string name="tools_copy_annot_waiting">Copying annotation to clipboard, please wait&#8230;</string>
    <string name="tools_paste_annot_waiting">Pasting annotation from clipboard, please wait&#8230;</string>
    <string name="tools_share_title">Share selected text</string>
    <string name="tools_share_subject">Selected text from: </string>
    <string name="tools_screenshot_creating">Creating Screenshot&#8230;</string>
    <string name="tools_screenshot_creating_error">An error occurred while creating the screenshot</string>
    <string name="tools_screenshot_share_intent_title">Share Screenshot</string>
    <string name="tools_qm_redact_by_text">Text redaction</string>
    <string name="tools_qm_redact_by_area">Area redaction</string>
    <string name="tools_qm_redact_by_page">Page redaction</string>
    <string name="tools_qm_redact_by_search">Redaction by search</string>
    <string name="tools_qm_disable_snapping">Disable snapping</string>
    <string name="tools_qm_line_start" comment="the start style of line ending style">Start</string>
    <string name="tools_qm_line_end" comment="the end style of line ending style">End</string>
    <string name="tools_redaction_overlay">Overlay text</string>
    <string name="tools_ruler_scale">Scale</string>
    <string name="unit_mm" translatable="false">mm</string>
    <string name="unit_cm" translatable="false">cm</string>
    <string name="unit_m" translatable="false">m</string>
    <string name="unit_km" translatable="false">km</string>
    <string name="unit_in" translatable="false">in</string>
    <string name="unit_yd" translatable="false">yd</string>
    <string name="unit_ft" translatable="false">ft</string>
    <string name="unit_mi" translatable="false">mi</string>
    <string name="tools_ruler_precision">Precision</string>
    <string name="tools_point_snap">Snap to points</string>
    <string name="tools_rich_text_enabled">Advanced text format</string>
    <string name="tools_eraser_type">Erase ink only</string>
    <string name="tools_eraser_ink_mode" comment="a mode that determines whether to erase by stroke or by pixel">Ink eraser mode</string>
    <string name="tools_eraser_ink_mode_stroke" comment="erase ink by stroke">Stroke</string>
    <string name="tools_eraser_ink_mode_pixel" comment="erase ink by pixel">Pixel</string>
    <string name="pressure_sensitive_text_enabled">Pressure</string>
    <string name="tools_text_horizontal_alignment">Horizontal alignment</string>
    <string name="tools_text_vertical_alignment">Vertical alignment</string>
    <string name="count_measurement_show_all">Show all</string>
    <string-array name="ruler_base_unit">
        <item>@string/unit_pt</item>
        <item>@string/unit_in</item>
        <item>@string/unit_mm</item>
        <item>@string/unit_cm</item>
    </string-array>
    <string-array name="ruler_translate_unit">
        <item>@string/unit_pt</item>
        <item>@string/unit_in</item>
        <item>@string/unit_mm</item>
        <item>@string/unit_cm</item>
        <item>@string/unit_ft</item>
        <item>@string/unit_yd</item>
        <item>@string/unit_m</item>
        <item>@string/unit_km</item>
        <item>@string/unit_mi</item>
    </string-array>
    <string-array name="ruler_precision">
        <item>1</item>
        <item>0.1</item>
        <item>0.01</item>
        <item>0.001</item>
        <item>0.0001</item>
    </string-array>
    <string name="style_picker_date_format1" translatable="false">MMMM dd, yyyy</string>
    <string name="style_picker_date_format2" translatable="false">MMM d, yyyy</string>
    <string name="style_picker_date_format3" translatable="false">yyyy-MM-dd</string>
    <string name="style_picker_date_format4" translatable="false">dd MMMM yyyy</string>
    <string name="style_picker_date_format5" translatable="false">dd.MM.yyyy</string>
    <string-array name="style_picker_date_formats">
        <item>@string/style_picker_date_format1</item>
        <item>@string/style_picker_date_format2</item>
        <item>@string/style_picker_date_format3</item>
        <item>@string/style_picker_date_format4</item>
        <item>@string/style_picker_date_format5</item>
    </string-array>
    <string-array name="style_ink_eraser_mode">
        <item>@string/tools_eraser_ink_mode_pixel</item>
        <item>@string/tools_eraser_ink_mode_stroke</item>
    </string-array>
    <string name="tools_dialog_colorpicker_title">Pick a Color</string>
    <string name="tools_dialog_formfilltext_title">Text Field Content</string>
    <string name="tools_dialog_textsearch_title">Text Search Options</string>
    <string name="tools_dialog_textsearch_wholeword">Whole word</string>
    <string name="tools_dialog_textsearch_case_sensitive">Case sensitive</string>
    <string name="tools_dialog_textsearch_regexp">Regular expressions</string>
    <string name="tools_dialog_textsearch_nothing_found">Nothing was found</string>
    <string name="tools_dialog_textsearch_invalid_string">Invalid search string</string>
    <string name="tools_dialog_textsearch_search_canceled">Text search canceled</string>
    <string name="error_has_xfa_forms_message">The file contains proprietary XFA extensions and can\'t be opened.</string>
    <string name="error_has_portfolio_message">Portfolio documents cannot be added to this document.</string>
    <string name="tools_signature_create_title">Create signature</string>
    <string name="tools_signature_saved_title">My signatures</string>
    <string name="tools_signature_create_dialog_save">Save signature</string>
    <string name="tools_signature_create_new_signature_button">Create new signature</string>
    <string name="tools_digitalsignature_error_invalid_image_path">Error while applying appearance (invalid image file path); file not signed.</string>
    <string name="tools_digitalsignature_error_appearance">Error while applying appearance; file not signed.</string>
    <string name="tools_digitalsignature_use_appearance">Use Appearance</string>
    <string name="tools_digitalsignature_msg_saved">Saved \"%1$s\"</string>
    <string name="tools_digitalsignature_msg_file_locked">Failed to save: file is locked for writing</string>
    <string name="tools_digitalsignature_msg_failed_to_save">Failed to sign the document</string>
    <string name="action_sort_annotlist_by_position">By position</string>
    <string name="action_sort_annotlist_by_date">By creation date</string>
    <string name="action_sort">Sort</string>
    <string name="annot_review_state_completed">Completed</string>
    <string name="annot_review_state_cancelled">Cancelled</string>
    <string name="annot_review_state_rejected">Rejected</string>
    <string name="annot_review_state_accepted">Accepted</string>
    <string name="annot_review_state_none">None</string>
</resources>