<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_review_state_none"
            android:title="@string/annot_review_state_none"
            android:icon="@drawable/ic_state_none" />
        <item
            android:id="@+id/menu_review_state_accepted"
            android:title="@string/annot_review_state_accepted"
            android:icon="@drawable/ic_state_accepted" />
        <item
            android:id="@+id/menu_review_state_cancelled"
            android:title="@string/annot_review_state_cancelled"
            android:icon="@drawable/ic_state_cancelled" />
        <item
            android:id="@+id/menu_review_state_completed"
            android:title="@string/annot_review_state_completed"
            android:icon="@drawable/ic_state_completed" />
        <item
            android:id="@+id/menu_review_state_rejected"
            android:title="@string/annot_review_state_rejected"
            android:icon="@drawable/ic_state_rejected" />
    </group>
</menu>
